workspace = { members = ["wgpu-app"] }
[package]
name = "mink-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wgpu_app = { path = "wgpu-app" }
winit = "0.29.15"
wgpu = "0.19.3"
egui = "0.27.2"
miniz_oxide = "0.7.4"
quartz_nbt = "0.2.9"
serde = "1.0.203"
serde_json = "1.0.117"
base64 = "0.22.1"
glam = "0.28.0"
mcproto-rs = { version = "0.2.0", default-features = false, features = ["v1_16_3", "std"] }
