[package]
name = "wgpu_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
wgpu = "0.19.3"

pollster = "0.3.0"
log = "0.4.17"

egui = "0.27.2"
egui-winit = "0.27.2"
egui-wgpu = { version = "0.27.2", features = ["winit"] }

